# lain-backend

./: .gitignore  autoapp.py  docker-compose.yml  pyproject.toml  scanResult.xml
compose/app/: Dockerfile  start.sh
compose/migrations/: Dockerfile
docs/: ERD_0.2.mdj  ERD_0.3.mdj  ERD_0.3.vuerd.json  nmap.xsd
lain/models/: __init__.py  building.py  contact.py  contact_type.py  credential.py  domain.py  domain_type.py  host.py  hosts_domains.py  hosts_vulnerabilities.py  networks.py  networks_vulnerabilities.py  organization.py  organizations_buildings.py  organizations_contacts.py  organizations_networks.py  organizations_peoples.py  people.py  peoples_contacts.py  peoples_vulnerabilities.py  project.py  protocol.py  service.py  services_credentials.py  services_protocols.py  services_vulnerabilities.py  vulnerability.py
lain/schemas/: building.py  domain.py  domain_type.py  networks.py  people.py  protocol.py  vulnerability.py
lain_backend/: app.py  config.py  database.py  events.py
lain_backend/cruds/: building.py  contact.py  contact_type.py  credential.py  domain.py  domain_type.py  host.py  hosts_domains.py  hosts_vulnerabilities.py  network.py  networks_vulnerabilities.py  organization.py  organizations_buildings.py  organizations_contacts.py  organizations_hosts.py  organizations_networks.py  organizations_peoples.py  people.py  peoples_contacts.py  peoples_vulnerabilities.py  project.py  protocol.py  service.py  services_credentials.py  services_protocols.py  (+2 more)
migrations/: v1_2020_02_25.sql
tests/: conftest.py  factories.py  test_lain.py
(+84 files in other folders)
