[tool.poetry]
name = "lain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.49.0"
sqlalchemy = "^1.3.13"
pytest = "^5.3.5"
databases = "^0.2.6"
requests = "^2.23.0"
environs = "^7.2.0"
asyncpg = "^0.20.1"
factory-boy = "^2.12.0"
aiosqlite = "^0.11.0"
pytest-asyncio = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.761"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
